Add invisible h1 for indexing

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,3 +1,5 @@
+<h1 style="display: none;">{{ page.title }} | {{ site.title }</h1>
+
 <!-- Floating particles -->
 <div class="particles" id="particles"></div>
 
