--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,6 +48,7 @@
     {% endif %}
 </head>
 <body>
+    <h1 style="display: none;">{{ page.title }} | {{ site.title }</h1>
     {% include header.html %}
     <main>
         {{ content }}
