--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,6 +55,6 @@
     <main>
         {{ content }}
     </main>
-    <script src="{{ '/assets/js/main.js' | relative_url }}"></script>
+    <script src="{{ '/assets/js/main.js?v=' | append: site.time | relative_url }}"></script>
 </body>
 </html>
